--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,8 @@ services:
     plan: free
     branch: main
     buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    startCommand: "gunicorn -b 0.0.0.0:$PORT app:app"
+    healthCheckPath: /test
     envVars:
       - key: SECRET_KEY
         sync: false
