--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.34
 python-dotenv==1.0.1
-gunicorn==23.0.0; sys_platform != "win32"
+gunicorn==23.0.0
